# id-card-maker-angular

./: .gitignore  LICENSE  README_MIGRATION.md  pyproject.toml
frontend/src/: styles.scss
frontend/src/app/: app.html  app.scss  app.ts
governance/: CONTRACTS.md  PLANS.md  SKILL.md  WORK_LOG.md
idcard_maker/: __main__.py  api_app.py  api_preview.py  app.py  constants.py
idcard_maker.dist-info/: METADATA
idcard_maker/controllers/: __init__.py
idcard_maker/core/: render.py
idcard_maker/resources/: help.html
idcard_maker/services/: generation.py
idcard_maker/ui/: layout.py
scripts/: sync_frontend_dist.py
tests/: test_api_d2.py
