[tool.briefcase]
project_name = "ID Card Maker"
bundle = "ca.cupe3523"
version = "1.0.0"
url = "https://example.org/idcard-maker"
license = "MIT"
author = "Georg York"
author_email = "h2onetguy@hotmail.com"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idcard-maker"
version = "1.0.0"
description = "Generate, preview, and email ID cards from manual entries or CSV."
requires-python = ">=3.11"
dependencies = [
    "toga>=0.5,<0.6",
    "pillow>=10.0.0",
    "python-barcode>=0.15.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["idcard_maker*"]

[tool.setuptools.package-data]
idcard_maker = ["resources/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.briefcase.app.idcard_maker]
formal_name = "ID Card Maker"
app_name = "idcard_maker"
description = "Generate, preview, and email ID cards from manual entries or CSV."
sources = ["idcard_maker"]

# Use modern, stable ranges (keeps you current without surprise major breaks)
requires = [
    "toga>=0.5,<0.6",
    "pillow>=10.0.0",
    "python-barcode>=0.15.0",
    # Backend API extraction (Angular migration)
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9"
]

# Bundle all runtime assets (courbd.ttf, logo.png, help.html, etc.)
resources = [
    "idcard_maker/resources/*"
]

# Optional: point to a base icon name; Briefcase will pick platform variants if present.
icon = "idcard_maker/resources/logo"

[tool.briefcase.app.idcard_maker.windows]
# (Keep empty unless you have Windows-only requirements)

[tool.briefcase.app.idcard_maker.macOS]
# (Keep empty unless you have macOS-only requirements)

[tool.briefcase.app.idcard_maker.linux]
# (Keep empty unless you have Linux-only requirements)
